# parse-crypto-predictions

./: README.md  main.py  pyproject.toml
data/: annotated-dataset.json
report/: decisoes.md  relatorio.md  tricky_cases.md
scripts/: __init__.py  calculate_metrics.py  cost_report.py  evaluate.py  generate_predictions.py
src/: agent.py  config.py  database.py  helpers.py  main.py  models.py  types.py
