[project]
name = "parse-crypto-predictions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.0",
    "fastapi>=0.116.2",
    "pycountry>=24.6.1",
    "pydantic-ai>=1.0.8",
    "pydantic-extra-types>=2.10.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
]
